--- a/src/content/en/tools/workbox/reference-docs/latest/index-all.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index-all.html
@@ -19,7 +19,7 @@
           <div class="symbol-detail-labels">
             <span class="label label-kind"><small>Version</small></span>
             &nbsp;&nbsp;&nbsp;
-            <span class="label label-version"><small>v5.0.0</small></span>
+            <span class="label label-version"><small>5.0.0</small></span>
           </div>
           <ul>
             <li><a href="module-workbox-background-sync.html">module:workbox-background-sync</a></li>
@@ -42,6 +42,7 @@
             <li><a href="module-workbox-build.html#.ManifestEntry">module:workbox-build.ManifestEntry</a></li>
             <li><a href="module-workbox-build.html#.ManifestTransform">module:workbox-build.ManifestTransform</a></li>
             <li><a href="module-workbox-build.html#.ManifestTransformResult">module:workbox-build.ManifestTransformResult</a></li>
+            <li><a href="module-workbox-build.html#.RuntimeCachingEntry">module:workbox-build.RuntimeCachingEntry</a></li>
             <li><a href="module-workbox-build.html#.copyWorkboxLibraries">module:workbox-build.copyWorkboxLibraries</a></li>
             <li><a href="module-workbox-build.html#.generateSW">module:workbox-build.generateSW</a></li>
             <li><a href="module-workbox-build.html#.getManifest">module:workbox-build.getManifest</a></li>
