--- a/src/content/en/tools/workbox/reference-docs/latest/index.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index.html
@@ -19,7 +19,7 @@
           <div class="symbol-detail-labels">
             <span class="label label-kind"><small>Version</small></span>
             &nbsp;&nbsp;&nbsp;
-            <span class="label label-version"><small>v5.0.0</small></span>
+            <span class="label label-version"><small>5.0.0</small></span>
           </div>
           <div class="symbol-index">
             <section>
@@ -180,6 +180,9 @@
                     </p>
                     <p class="symbol-index-name">
                       <a href="module-workbox-build.html#.ManifestTransformResult" class="!symbol-index-name">workbox-build.<wbr>ManifestTransformResult</a>
+                    </p>
+                    <p class="symbol-index-name">
+                      <a href="module-workbox-build.html#.RuntimeCachingEntry" class="!symbol-index-name">workbox-build.<wbr>RuntimeCachingEntry</a>
                     </p>
                   </div>
                 </div>
