--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-background-sync.Queue.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-background-sync.Queue.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-background-sync.html">workbox-background-sync</a>.<wbr></small><span class="symbol-name">Queue</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>A class to manage storing failed requests in IndexedDB and retrying them
               later. All parts of the storing and replaying process are observable via
@@ -115,7 +115,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>string</code> </p>
+                  <p><code>string</code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
@@ -129,7 +129,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Array of Object</code> </p>
+                  <p><code>Promise containing Array of Object</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="popRequest" class="symbol-name">popRequest</h3>
@@ -141,7 +141,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Object</code> </p>
+                  <p><code>Promise containing Object</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="pushRequest" class="symbol-name">pushRequest</h3>
@@ -239,7 +239,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Object</code> </p>
+                  <p><code>Promise containing Object</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="unshiftRequest" class="symbol-name">unshiftRequest</h3>
