--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.BroadcastCacheUpdate.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.BroadcastCacheUpdate.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-broadcast-update.html">workbox-broadcast-update</a>.<wbr></small><span class="symbol-name">BroadcastCacheUpdate</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>Uses the <code>postMessage()</code> API to inform any open windows/tabs when a cached
               response has been updated.</p>
@@ -111,8 +111,7 @@
     cacheName: 'the-cache-name',
     updatedURL: 'https://example.com/'
   }
-}
-</code></pre>
+}</code></pre>
               <section>
                 <table class="function param responsive">
                   <tr>
@@ -194,7 +193,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise</code> Resolves once the update is sent.</p>
+                  <p><code>Promise</code>&nbsp;Resolves once the update is sent.</p>
                 </dd>
               </dl>
             </section>
