--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-cacheable-response.CacheableResponse.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-cacheable-response.CacheableResponse.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-cacheable-response.html">workbox-cacheable-response</a>.<wbr></small><span class="symbol-name">CacheableResponse</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>This class allows you to set up rules determining what
               status codes and/or headers need to be present in order for a
@@ -124,7 +124,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>boolean</code> <code>true</code> if the <code>Response</code> is cacheable, and <code>false</code>
+                  <p><code>boolean</code>&nbsp;<code>true</code> if the <code>Response</code> is cacheable, and <code>false</code>
                     otherwise.</p>
                 </dd>
               </dl>
