--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-google-analytics.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-google-analytics.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
           </header>
           <section>
@@ -70,7 +70,7 @@
                               <td>
                                 <p class="details-table-optional">Optional</p>
                                 <p class="details-table-types">Object</p>
-                                <p><a href="https://developers.google.com/analytics/devguides/collection/protocol/v1/parameters">Measurement Protocol parameters</a>,
+                                <p><a href="/analytics/devguides/collection/protocol/v1/parameters">Measurement Protocol parameters</a>,
                                   expressed as key/value pairs, to be added to replayed Google Analytics
                                   requests. This can be used to, e.g., set a custom dimension indicating
                                   that the request was replayed.</p>
