--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-precaching.PrecacheController.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-precaching.PrecacheController.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-precaching.html">workbox-precaching</a>.<wbr></small><span class="symbol-name">PrecacheController</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>Performs efficient precaching of assets.</p>
           </header>
@@ -68,7 +68,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing <a href="module-workbox-precaching.html#.CleanupResult">module:workbox-precaching.CleanupResult</a></code> </p>
+                  <p><code>Promise containing <a href="module-workbox-precaching.html#.CleanupResult">module:workbox-precaching.CleanupResult</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="addToCacheList" class="symbol-name">addToCacheList</h3>
@@ -130,7 +130,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code> </p>
+                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="createHandlerBoundToURL" class="symbol-name">createHandlerBoundToURL</h3>
@@ -175,7 +175,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code> </p>
+                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="getCachedURLs" class="symbol-name">getCachedURLs</h3>
@@ -185,7 +185,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Array of string</code> The precached URLs.</p>
+                  <p><code>Array of string</code>&nbsp;The precached URLs.</p>
                 </dd>
               </dl>
               <h3 id="getCacheKeyForURL" class="symbol-name">getCacheKeyForURL</h3>
@@ -216,7 +216,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>string</code> The versioned URL that corresponds to a cache key
+                  <p><code>string</code>&nbsp;The versioned URL that corresponds to a cache key
                     for the original URL, or undefined if that URL isn't precached.</p>
                 </dd>
               </dl>
@@ -227,7 +227,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Object with string properties</code> A URL to cache key mapping.</p>
+                  <p><code>Object with string properties</code>&nbsp;A URL to cache key mapping.</p>
                 </dd>
               </dl>
               <h3 id="install" class="symbol-name">install</h3>
@@ -288,7 +288,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing <a href="module-workbox-precaching.html#.InstallResult">module:workbox-precaching.InstallResult</a></code> </p>
+                  <p><code>Promise containing <a href="module-workbox-precaching.html#.InstallResult">module:workbox-precaching.InstallResult</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id="matchPrecache" class="symbol-name">matchPrecache</h3>
@@ -329,7 +329,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing (Response or undefined)</code> </p>
+                  <p><code>Promise containing (Response or undefined)</code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
