--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-range-requests.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-range-requests.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
           </header>
           <section>
@@ -75,7 +75,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Response</code> Either a <code>206 Partial Content</code> response, with
+                  <p><code>Promise containing Response</code>&nbsp;Either a <code>206 Partial Content</code> response, with
                     the response body set to the slice of content specified by the request's
                     <code>Range:</code> header, or a <code>416 Range Not Satisfiable</code> response if the
                     conditions of the <code>Range:</code> header can't be met.</p>
