--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.RegExpRoute.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.RegExpRoute.html
@@ -16,18 +16,18 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-routing.html">workbox-routing</a>.<wbr></small><span class="symbol-name">RegExpRoute</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>RegExpRoute makes it easy to create a regular expression based
               <a href="module-workbox-routing.Route.html">Route</a>.</p>
             <p>For same-origin requests the RegExp only needs to match part of the URL. For
               requests against third-party servers, you must define a RegExp that matches
               the start of the URL.</p>
-            <p><a href="https://developers.google.com/web/tools/workbox/modules/workbox-routing">See the module docs for info.</a></p>
+            <p><a href="/web/tools/workbox/modules/workbox-routing">See the module docs for info.</a></p>
           </header>
           <section>
             <h2>Constructor</h2>
@@ -35,9 +35,9 @@
               <h3 id="RegExpRoute" class="symbol-name">RegExpRoute</h3>
               <p class="type-signature"> new
                 RegExpRoute(regExp, handler, method)</p>
-              <p>If the regulard expression contains
+              <p>If the regular expression contains
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp#grouping-back-references">capture groups</a>,
-                th ecaptured values will be passed to the
+                the captured values will be passed to the
                 <a href="module-workbox-routing.html#~handlerCallback">handler's</a> <code>params</code>
                 argument.</p>
               <section>
