--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Route.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Route.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-routing.html">workbox-routing</a>.<wbr></small><span class="symbol-name">Route</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>A <code>Route</code> consists of a pair of callback functions, &quot;match&quot; and &quot;handler&quot;.
               The &quot;match&quot; callback determine if a route should be used to &quot;handle&quot; a
@@ -48,7 +48,7 @@
                         <p>match</p>
                       </td>
                       <td>
-                        <p class="details-table-types">module:workbox-routing.Route~matchCallback</p>
+                        <p class="details-table-types"><a href="module-workbox-routing.html#~matchCallback">module:workbox-routing~matchCallback</a></p>
                         <p>A callback function that determines whether the route matches a given
                           <code>fetch</code> event by returning a non-falsy value.</p>
                       </td>
