--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-streams.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-streams.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
           </header>
           <section>
@@ -56,7 +56,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Object containing {done: Promise, stream: ReadableStream}</code> </p>
+                  <p><code>Object containing {done: Promise, stream: ReadableStream}</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id=".concatenateToResponse" class="symbol-name">concatenateToResponse</h3>
@@ -102,7 +102,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Object containing {done: Promise, response: Response}</code> </p>
+                  <p><code>Object containing {done: Promise, response: Response}</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id=".isSupported" class="symbol-name">isSupported</h3>
@@ -115,7 +115,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>boolean</code> <code>true</code>, if the current browser meets the requirements for
+                  <p><code>boolean</code>&nbsp;<code>true</code>, if the current browser meets the requirements for
                     streaming responses, and <code>false</code> otherwise.</p>
                 </dd>
               </dl>
@@ -162,7 +162,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code> </p>
+                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
