--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-core_skipWaiting.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-core_skipWaiting.js.html
@@ -29,8 +29,9 @@
 */
 import &#x27;./_version.js&#x27;;
 /**
- * Force a service worker to become active, instead of waiting. This is
- * normally used in conjunction with &#x60;clientsClaim()&#x60;.
+ * Force a service worker to activate immediately, instead of
+ * [waiting](/web/fundamentals/primers/service-workers/lifecycle#waiting)
+ * for existing clients to close.
  *
  * @memberof module:workbox-core
  */
