--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-google-analytics_initialize.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-google-analytics_initialize.js.html
@@ -172,7 +172,7 @@ const createGtmJsRoute &#x3D; (cacheName) &#x3D;&gt; {
  * @param {Object} [options.cacheName] The cache name to store and retrieve
  *     analytics.js. Defaults to the cache names provided by &#x60;workbox-core&#x60;.
  * @param {Object} [options.parameterOverrides]
- *     [Measurement Protocol parameters](https://developers.google.com/analytics/devguides/collection/protocol/v1/parameters),
+ *     [Measurement Protocol parameters](/analytics/devguides/collection/protocol/v1/parameters),
  *     expressed as key/value pairs, to be added to replayed Google Analytics
  *     requests. This can be used to, e.g., set a custom dimension indicating
  *     that the request was replayed.
