--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-navigation-preload_enable.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-navigation-preload_enable.js.html
@@ -34,7 +34,7 @@ import &#x27;./_version.js&#x27;;
  * If the browser supports Navigation Preload, then this will enable it.
  *
  * @param {string} [headerValue] Optionally, allows developers to
- * [override](https://developers.google.com/web/updates/2017/02/navigation-preload#changing_the_header)
+ * [override](/web/updates/2017/02/navigation-preload#changing_the_header)
  * the value of the &#x60;Service-Worker-Navigation-Preload&#x60; header which will be
  * sent to the server when making the navigation request.
  *
