--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-precaching_PrecacheController.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-precaching_PrecacheController.js.html
@@ -352,7 +352,7 @@ class PrecacheController {
                 // https://github.com/GoogleChrome/workbox/issues/1441
                 throw new WorkboxError(&#x27;missing-precache-entry&#x27;, {
                     cacheName: this._cacheName,
-                    url: request.url,
+                    url: request instanceof Request ? request.url : request,
                 });
             }
             catch (error) {
