--- a/src/content/en/tools/workbox/reference-docs/latest/workbox.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
           </header>
           <section>
@@ -256,7 +256,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>string</code> This callback should return a path of module. This will
+                  <p><code>string</code>&nbsp;This callback should return a path of module. This will
                     be passed to <code>importScripts()</code>.</p>
                 </dd>
               </dl>
