--- a/src/content/en/tools/workbox/_shared/contributors.html
+++ b/src/content/en/tools/workbox/_shared/contributors.html
@@ -43,21 +43,21 @@
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/gauntface" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/139760?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/gauntface" target="_blank">
-          gauntface
-        </a>
-      </div>
-      <div class="wb-contrib">
         <a class="wb-contrib__img-link" href="https://github.com/philipwalton" target="_blank">
           <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/326742?v&#x3D;4">
         </a>
         <br />
         <a class="wb-contrib__link" href="https://github.com/philipwalton" target="_blank">
           philipwalton
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/gauntface" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/139760?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/gauntface" target="_blank">
+          gauntface
         </a>
       </div>
       <div class="wb-contrib">
@@ -88,12 +88,30 @@
         </a>
       </div>
       <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/samdutton" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/205226?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/samdutton" target="_blank">
+          samdutton
+        </a>
+      </div>
+      <div class="wb-contrib">
         <a class="wb-contrib__img-link" href="https://github.com/merrywhether" target="_blank">
           <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/4097742?v&#x3D;4">
         </a>
         <br />
         <a class="wb-contrib__link" href="https://github.com/merrywhether" target="_blank">
           merrywhether
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/kaykayehnn" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/19822240?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/kaykayehnn" target="_blank">
+          kaykayehnn
         </a>
       </div>
       <div class="wb-contrib">
@@ -106,30 +124,30 @@
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/samdutton" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/205226?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/azizhk" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/5094296?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/samdutton" target="_blank">
-          samdutton
+        <a class="wb-contrib__link" href="https://github.com/azizhk" target="_blank">
+          azizhk
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/chrisdns" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/17642361?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/samthor" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/119184?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/chrisdns" target="_blank">
-          chrisdns
+        <a class="wb-contrib__link" href="https://github.com/samthor" target="_blank">
+          samthor
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/kevin-brotcke" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/1934842?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/salmoro" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/20197680?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/kevin-brotcke" target="_blank">
-          kevin-brotcke
+        <a class="wb-contrib__link" href="https://github.com/salmoro" target="_blank">
+          salmoro
         </a>
       </div>
       <div class="wb-contrib">
@@ -142,57 +160,12 @@
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/tsirlucas" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/18744505?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/nuragic" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/1586378?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/tsirlucas" target="_blank">
-          tsirlucas
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/josephliccini" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/7726025?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/josephliccini" target="_blank">
-          josephliccini
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/torbs" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/429436?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/torbs" target="_blank">
-          torbs
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/DorianGrey" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/1473055?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/DorianGrey" target="_blank">
-          DorianGrey
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/FluorescentHallucinogen" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/7892779?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/FluorescentHallucinogen" target="_blank">
-          FluorescentHallucinogen
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/green-arrow" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/2180127?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/green-arrow" target="_blank">
-          green-arrow
+        <a class="wb-contrib__link" href="https://github.com/nuragic" target="_blank">
+          nuragic
         </a>
       </div>
       <div class="wb-contrib">
@@ -205,12 +178,39 @@
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/antleblanc" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/428384?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/markgoho" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/9759954?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/antleblanc" target="_blank">
-          antleblanc
+        <a class="wb-contrib__link" href="https://github.com/markgoho" target="_blank">
+          markgoho
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/kirillDanshin" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/9026581?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/kirillDanshin" target="_blank">
+          kirillDanshin
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/kevin-brotcke" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/1934842?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/kevin-brotcke" target="_blank">
+          kevin-brotcke
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/josephliccini" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/7726025?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/josephliccini" target="_blank">
+          josephliccini
         </a>
       </div>
 
