--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.BroadcastUpdatePlugin.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.BroadcastUpdatePlugin.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-broadcast-update.html">workbox-broadcast-update</a>.<wbr></small><span class="symbol-name">BroadcastUpdatePlugin</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>This plugin will automatically broadcast a message whenever a cached response
               is updated.</p>
