--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-broadcast-update.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
           </header>
           <section>
@@ -80,7 +80,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>boolean</code> </p>
+                  <p><code>boolean</code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
