--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-expiration.ExpirationPlugin.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-expiration.ExpirationPlugin.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-expiration.html">workbox-expiration</a>.<wbr></small><span class="symbol-name">ExpirationPlugin</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>This plugin can be used in the Workbox APIs to regularly enforce a
               limit on the age and / or the number of cached requests.</p>
@@ -79,7 +79,7 @@
                               </td>
                               <td>
                                 <p class="details-table-optional">Optional</p>
-                                <p class="details-table-types">unknown</p>
+                                <p class="details-table-types">number</p>
                                 <p>The maximum age of an entry before
                                   it's treated as stale and removed.</p>
                               </td>
