--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-precaching.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-precaching.html
@@ -20,7 +20,7 @@
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>Most consumers of this module will want to use the
               <a href="module-workbox-precaching.html#.precacheAndRoute">precacheAndRoute()</a>
@@ -191,7 +191,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code> </p>
+                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id=".createHandlerBoundToURL" class="symbol-name">createHandlerBoundToURL</h3>
@@ -238,7 +238,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code> </p>
+                  <p><code><a href="module-workbox-routing.html#~handlerCallback">module:workbox-routing~handlerCallback</a></code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id=".getCacheKeyForURL" class="symbol-name">getCacheKeyForURL</h3>
@@ -276,7 +276,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>string</code> The cache key that corresponds to that URL.</p>
+                  <p><code>string</code>&nbsp;The cache key that corresponds to that URL.</p>
                 </dd>
               </dl>
               <h3 id=".matchPrecache" class="symbol-name">matchPrecache</h3>
@@ -312,7 +312,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing (Response or undefined)</code> </p>
+                  <p><code>Promise containing (Response or undefined)</code>&nbsp;</p>
                 </dd>
               </dl>
               <h3 id=".precache" class="symbol-name">precache</h3>
@@ -555,7 +555,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Array of URL</code> To add additional urls to test, return an Array of
+                  <p><code>Array of URL</code>&nbsp;To add additional urls to test, return an Array of
                     URLs. Please note that these <strong>should not be strings</strong>, but URL objects.</p>
                 </dd>
               </dl>
