--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-range-requests.RangeRequestsPlugin.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-range-requests.RangeRequestsPlugin.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-range-requests.html">workbox-range-requests</a>.<wbr></small><span class="symbol-name">RangeRequestsPlugin</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>The range request plugin makes it easy for a request with a 'Range' header to
               be fulfilled by a cached response.</p>
