--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Router.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-routing.Router.html
@@ -16,11 +16,11 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-routing.html">workbox-routing</a>.<wbr></small><span class="symbol-name">Router</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>The Router can be used to process a FetchEvent through one or more
               <a href="module-workbox-routing.Route.html">Routes</a> responding with a Request if
@@ -52,7 +52,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Object with Array of <a href="module-workbox-routing.Route.html">module:workbox-routing.Route</a> properties</code> routes A <code>Map</code> of HTTP
+                  <p><code>Object with Array of <a href="module-workbox-routing.Route.html">module:workbox-routing.Route</a> properties</code>&nbsp;routes A <code>Map</code> of HTTP
                     method name ('GET', etc.) to an array of all the corresponding <code>Route</code>
                     instances that are registered.</p>
                 </dd>
@@ -77,8 +77,7 @@
       ['./script3.js', {mode: 'no-cors'}],
     ],
   },
-}
-</code></pre>
+}</code></pre>
               <dl class="dl-compact">
               </dl>
               <h3 id="addFetchListener" class="symbol-name">addFetchListener</h3>
@@ -151,7 +150,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Object</code> An object with <code>route</code> and <code>params</code> properties.
+                  <p><code>Object</code>&nbsp;An object with <code>route</code> and <code>params</code> properties.
                     They are populated if a matching route was found or <code>undefined</code>
                     otherwise.</p>
                 </dd>
@@ -213,7 +212,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>(Promise containing Response or undefined)</code> A promise is returned if a
+                  <p><code>(Promise containing Response or undefined)</code>&nbsp;A promise is returned if a
                     registered route can handle the request. If there is no matching
                     route and there's no <code>defaultHandler</code>, <code>undefined</code> is returned.</p>
                 </dd>
