--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.CacheFirst.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.CacheFirst.html
@@ -16,13 +16,13 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-strategies.html">workbox-strategies</a>.<wbr></small><span class="symbol-name">CacheFirst</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
-            <p>An implementation of a <a href="https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook/#cache-falling-back-to-network">cache-first</a>
+            <p>An implementation of a <a href="/web/fundamentals/instant-and-offline/offline-cookbook/#cache-falling-back-to-network">cache-first</a>
               request strategy.</p>
             <p>A cache first strategy is useful for assets that have been revisioned,
               such as URLs like <code>/styles/example.a8f5f1.css</code>, since they
@@ -75,7 +75,7 @@
                               </td>
                               <td>
                                 <p class="details-table-types">Array of Object</p>
-                                <p><a href="https://developers.google.com/web/tools/workbox/guides/using-plugins">Plugins</a>
+                                <p><a href="/web/tools/workbox/guides/using-plugins">Plugins</a>
                                   to use in conjunction with this caching strategy.</p>
                               </td>
                             </tr>
@@ -84,7 +84,7 @@
                                 <p>fetchOptions</p>
                               </td>
                               <td>
-                                <p class="details-table-types">unknown</p>
+                                <p class="details-table-types">Object</p>
                                 <p>Values passed along to the
                                   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters"><code>init</code></a>
                                   of all fetch() requests made by this strategy.</p>
@@ -95,7 +95,7 @@
                                 <p>matchOptions</p>
                               </td>
                               <td>
-                                <p class="details-table-types">unknown</p>
+                                <p class="details-table-types">Object</p>
                                 <p><a href="https://w3c.github.io/ServiceWorker/#dictdef-cachequeryoptions"><code>CacheQueryOptions</code></a></p>
                               </td>
                             </tr>
@@ -146,8 +146,8 @@
                                 <p>request</p>
                               </td>
                               <td>
-                                <p class="details-table-types">Request</p>
-                                <p>The request to run this strategy for.</p>
+                                <p class="details-table-types">(Request or string)</p>
+                                <p>A request to run this strategy for.</p>
                               </td>
                             </tr>
                             <tr>
@@ -170,7 +170,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Response</code> </p>
+                  <p><code>Promise containing Response</code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
