--- a/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.NetworkFirst.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/module-workbox-strategies.NetworkFirst.html
@@ -16,17 +16,17 @@
         <div id="jsdoc-main" role="main">
           <header class="page-header">
             <h1><small><a href="module-workbox-strategies.html">workbox-strategies</a>.<wbr></small><span class="symbol-name">NetworkFirst</span></h1>
-            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-inner"><small>inner</small></span></div>
+            <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span>
               &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v5.0.0</small></span>
+              <span class="label label-version"><small>5.0.0</small></span>
             </div>
             <p>An implementation of a
-              <a href="https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook/#network-falling-back-to-cache">network first</a>
+              <a href="/web/fundamentals/instant-and-offline/offline-cookbook/#network-falling-back-to-cache">network first</a>
               request strategy.</p>
             <p>By default, this strategy will cache responses with a 200 status code as
-              well as <a href="https://developers.google.com/web/tools/workbox/guides/handle-third-party-requests">opaque responses</a>.
+              well as <a href="/web/tools/workbox/guides/handle-third-party-requests">opaque responses</a>.
               Opaque responses are are cross-origin requests where the response doesn't
               support <a href="https://enable-cors.org/">CORS</a>.</p>
             <p>If the network request fails, and there is no cache match, this will throw
@@ -77,7 +77,7 @@
                               </td>
                               <td>
                                 <p class="details-table-types">Array of Object</p>
-                                <p><a href="https://developers.google.com/web/tools/workbox/guides/using-plugins">Plugins</a>
+                                <p><a href="/web/tools/workbox/guides/using-plugins">Plugins</a>
                                   to use in conjunction with this caching strategy.</p>
                               </td>
                             </tr>
@@ -86,7 +86,7 @@
                                 <p>fetchOptions</p>
                               </td>
                               <td>
-                                <p class="details-table-types">unknown</p>
+                                <p class="details-table-types">Object</p>
                                 <p>Values passed along to the
                                   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters"><code>init</code></a>
                                   of all fetch() requests made by this strategy.</p>
@@ -97,7 +97,7 @@
                                 <p>matchOptions</p>
                               </td>
                               <td>
-                                <p class="details-table-types">unknown</p>
+                                <p class="details-table-types">Object</p>
                                 <p><a href="https://w3c.github.io/ServiceWorker/#dictdef-cachequeryoptions"><code>CacheQueryOptions</code></a></p>
                               </td>
                             </tr>
@@ -110,7 +110,7 @@
                                 <p>If set, any network requests
                                   that fail to respond within the timeout will fallback to the cache.</p>
                                 <p>This option can be used to combat
-                                  &quot;<a href="https://developers.google.com/web/fundamentals/performance/poor-connectivity/#lie-fi">lie-fi</a>&quot;
+                                  &quot;<a href="/web/fundamentals/performance/poor-connectivity/#lie-fi">lie-fi</a>&quot;
                                   scenarios.</p>
                               </td>
                             </tr>
@@ -161,8 +161,8 @@
                                 <p>request</p>
                               </td>
                               <td>
-                                <p class="details-table-types">Request</p>
-                                <p>The request to run this strategy for.</p>
+                                <p class="details-table-types">(Request or string)</p>
+                                <p>A request to run this strategy for.</p>
                               </td>
                             </tr>
                             <tr>
@@ -185,7 +185,7 @@
               <dl class="dl-compact">
                 <dt>Returns</dt>
                 <dd>
-                  <p><code>Promise containing Response</code> </p>
+                  <p><code>Promise containing Response</code>&nbsp;</p>
                 </dd>
               </dl>
             </section>
