--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-build_src_inject-manifest.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-build_src_inject-manifest.js.html
@@ -43,6 +43,7 @@ const replaceAndUpdateSourceMap &#x3D;
   require(&#x27;./lib/replace-and-update-source-map&#x27;);
 const validate &#x3D; require(&#x27;./lib/validate-options&#x27;);
 
+// eslint-disable-next-line jsdoc/newline-after-description
 /**
  * This method creates a list of URLs to precache, referred to as a &quot;precache
  * manifest&quot;, based on the options you provide.
@@ -53,8 +54,86 @@ const validate &#x3D; require(&#x27;./lib/validate-options&#x27;);
  * The final service worker file, with the manifest injected, is written to
  * disk at &#x60;swDest&#x60;.
  *
- * @param {Object} config Please refer to the
- * [configuration guide](https://developers.google.com/web/tools/workbox/modules/workbox-build#full_injectmanifest_config).
+ * @param {Object} config The configuration to use.
+ *
+ * @param {string} config.globDirectory The local directory you wish to match
+ * &#x60;globPatterns&#x60; against. The path is relative to the current directory.
+ *
+ * @param {string} config.swDest The path and filename of the service worker file
+ * that will be created by the build process, relative to the current working
+ * directory. It must end in &#x27;.js&#x27;.
+ *
+ * @param {string} config.swSrc The path and filename of the service worker file
+ * that will be read during the build process, relative to the current working
+ * directory.
+ *
+ * @param {Array&amp;lt;module:workbox-build.ManifestEntry&gt;} [config.additionalManifestEntries]
+ * A list of entries to be precached, in addition to any entries that are
+ * generated as part of the build configuration.
+ *
+ * @param {RegExp} [config.dontCacheBustURLsMatching] Assets that match this will be
+ * assumed to be uniquely versioned via their URL, and exempted from the normal
+ * HTTP cache-busting that&#x27;s done when populating the precache. While not
+ * required, it&#x27;s recommended that if your existing build process already
+ * inserts a &#x60;[hash]&#x60; value into each filename, you provide a RegExp that will
+ * detect that, as it will reduce the bandwidth consumed when precaching.
+ *
+ * @param {boolean} [config.globFollow&#x3D;true] Determines whether or not symlinks
+ * are followed when generating the precache manifest. For more information, see
+ * the definition of &#x60;follow&#x60; in the &#x60;glob&#x60;
+ * [documentation](https://github.com/isaacs/node-glob#options).
+ *
+ * @param {Array&amp;lt;string&gt;} [config.globIgnores&#x3D;[&#x27;node_modules/**&#x27;]]
+ * A set of patterns matching files to always exclude when generating the
+ * precache manifest. For more information, see the definition of &#x60;ignore&#x60; in the &#x60;glob&#x60;
+ * [documentation](https://github.com/isaacs/node-glob#options).
+ *
+ * @param {Array&amp;lt;string&gt;} [config.globPatterns&#x3D;[&#x27;**.{js,css,html}&#x27;]]
+ * Files matching any of these patterns will be included in the precache
+ * manifest. For more information, see the
+ * [&#x60;glob&#x60; primer](https://github.com/isaacs/node-glob#glob-primer).
+ *
+ * @param {boolean} [config.globStrict&#x3D;true] If true, an error reading a directory when
+ * generating a precache manifest will cause the build to fail. If false, the
+ * problematic directory will be skipped. For more information, see the
+ * definition of &#x60;strict&#x60; in the &#x60;glob&#x60;
+ * [documentation](https://github.com/isaacs/node-glob#options).
+ *
+ * @param  {string} [config.injectionPoint&#x3D;&#x27;self.__WB_MANIFEST&#x27;] The string to
+ * find inside of the &#x60;swSrc&#x60; file. Once found, it will be replaced by the
+ * generated precache manifest.
+ *
+ * @param {Array&amp;lt;module:workbox-build.ManifestTransform&gt;} [config.manifestTransforms] One or more
+ * functions which will be applied sequentially against the generated manifest.
+ * If &#x60;modifyURLPrefix&#x60; or &#x60;dontCacheBustURLsMatching&#x60; are also specified, their
+ * corresponding transformations will be applied first.
+ *
+ * @param {number} [config.maximumFileSizeToCacheInBytes&#x3D;2097152] This value can be
+ * used to determine the maximum size of files that will be precached. This
+ * prevents you from inadvertently precaching very large files that might have
+ * accidentally matched one of your patterns.
+ *
+ * @param {string} [config.mode&#x3D;&#x27;production&#x27;] If set to &#x27;production&#x27;, then an
+ * optimized service worker bundle that excludes debugging info will be
+ * produced. If not explicitly configured here, the &#x60;process.env.NODE_ENV&#x60; value
+ * will be used, and failing that, it will fall back to &#x60;&#x27;production&#x27;&#x60;.
+ *
+ * @param {Object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
+ * that, if present in an entry in the precache manifest, will be replaced with
+ * the corresponding value. This can be used to, for example, remove or add a
+ * path prefix from a manifest entry if your web hosting setup doesn&#x27;t match
+ * your local filesystem setup. As an alternative with more flexibility, you can
+ * use the &#x60;manifestTransforms&#x60; option and provide a function that modifies the
+ * entries in the manifest using whatever logic you provide.
+ *
+ * @param {Object} [config.templatedURLs] If a URL is rendered based on some
+ * server-side logic, its contents may depend on multiple files or on some other
+ * unique string value. The keys in this object are server-rendered URLs. If the
+ * values are an array of strings, they will be interpreted as &#x60;glob&#x60; patterns,
+ * and the contents of any files matching the patterns will be used to uniquely
+ * version the URL. If used with a single string, it will be interpreted as
+ * unique versioning information that you&#x27;ve generated for a given URL.
+ *
  * @return {Promise&amp;lt;{count: number, filePaths: Array&amp;lt;string&gt;, size: number, warnings: Array&amp;lt;string&gt;}&gt;}
  * A promise that resolves once the service worker and related files
  * (indicated by &#x60;filePaths&#x60;) has been written to &#x60;swDest&#x60;. The &#x60;size&#x60; property
@@ -152,7 +231,8 @@ async function injectManifest(config) {
     count,
     size,
     warnings,
-    filePaths: Object.keys(filesToWrite),
+    // Use upath.resolve() to make all the paths absolute.
+    filePaths: Object.keys(filesToWrite).map((f) &#x3D;&gt; upath.resolve(f)),
   };
 }
 
