--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-routing_NavigationRoute.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-routing_NavigationRoute.js.html
@@ -34,24 +34,24 @@ import &#x27;./_version.js&#x27;;
 /**
  * NavigationRoute makes it easy to create a
  * [Route]{@link module:workbox-routing.Route} that matches for browser
- * [navigation requests]{@link https://developers.google.com/web/fundamentals/primers/service-workers/high-performance-loading#first_what_are_navigation_requests}.
+ * [navigation requests]{@link /web/fundamentals/primers/service-workers/high-performance-loading#first_what_are_navigation_requests}.
  *
  * It will only match incoming Requests whose
  * [&#x60;mode&#x60;]{@link https://fetch.spec.whatwg.org/#concept-request-mode}
  * is set to &#x60;navigate&#x60;.
  *
  * You can optionally only apply this route to a subset of navigation requests
- * by using one or both of the &#x60;blacklist&#x60; and &#x60;whitelist&#x60; parameters.
+ * by using one or both of the &#x60;denylist&#x60; and &#x60;allowlist&#x60; parameters.
  *
  * @memberof module:workbox-routing
  * @extends module:workbox-routing.Route
  */
 class NavigationRoute extends Route {
     /**
-     * If both &#x60;blacklist&#x60; and &#x60;whiltelist&#x60; are provided, the &#x60;blacklist&#x60; will
+     * If both &#x60;denylist&#x60; and &#x60;allowlist&#x60; are provided, the &#x60;denylist&#x60; will
      * take precedence and the request will not match this route.
      *
-     * The regular expressions in &#x60;whitelist&#x60; and &#x60;blacklist&#x60;
+     * The regular expressions in &#x60;allowlist&#x60; and &#x60;denylist&#x60;
      * are matched against the concatenated
      * [&#x60;pathname&#x60;]{@link https://developer.mozilla.org/en-US/docs/Web/API/HTMLHyperlinkElementUtils/pathname}
      * and [&#x60;search&#x60;]{@link https://developer.mozilla.org/en-US/docs/Web/API/HTMLHyperlinkElementUtils/search}
@@ -60,30 +60,30 @@ class NavigationRoute extends Route {
      * @param {module:workbox-routing~handlerCallback} handler A callback
      * function that returns a Promise resulting in a Response.
      * @param {Object} options
-     * @param {Array&amp;lt;RegExp&gt;} [options.blacklist] If any of these patterns match,
-     * the route will not handle the request (even if a whitelist RegExp matches).
-     * @param {Array&amp;lt;RegExp&gt;} [options.whitelist&#x3D;[/./]] If any of these patterns
+     * @param {Array&amp;lt;RegExp&gt;} [options.denylist] If any of these patterns match,
+     * the route will not handle the request (even if a allowlist RegExp matches).
+     * @param {Array&amp;lt;RegExp&gt;} [options.allowlist&#x3D;[/./]] If any of these patterns
      * match the URL&#x27;s pathname and search parameter, the route will handle the
-     * request (assuming the blacklist doesn&#x27;t match).
+     * request (assuming the denylist doesn&#x27;t match).
      */
-    constructor(handler, { whitelist &#x3D; [/./], blacklist &#x3D; [] } &#x3D; {}) {
+    constructor(handler, { allowlist &#x3D; [/./], denylist &#x3D; [] } &#x3D; {}) {
         if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
-            assert.isArrayOfClass(whitelist, RegExp, {
+            assert.isArrayOfClass(allowlist, RegExp, {
                 moduleName: &#x27;workbox-routing&#x27;,
                 className: &#x27;NavigationRoute&#x27;,
                 funcName: &#x27;constructor&#x27;,
-                paramName: &#x27;options.whitelist&#x27;,
+                paramName: &#x27;options.allowlist&#x27;,
             });
-            assert.isArrayOfClass(blacklist, RegExp, {
+            assert.isArrayOfClass(denylist, RegExp, {
                 moduleName: &#x27;workbox-routing&#x27;,
                 className: &#x27;NavigationRoute&#x27;,
                 funcName: &#x27;constructor&#x27;,
-                paramName: &#x27;options.blacklist&#x27;,
+                paramName: &#x27;options.denylist&#x27;,
             });
         }
         super((options) &#x3D;&gt; this._match(options), handler);
-        this._whitelist &#x3D; whitelist;
-        this._blacklist &#x3D; blacklist;
+        this._allowlist &#x3D; allowlist;
+        this._denylist &#x3D; denylist;
     }
     /**
      * Routes match handler.
@@ -100,17 +100,17 @@ class NavigationRoute extends Route {
             return false;
         }
         const pathnameAndSearch &#x3D; url.pathname + url.search;
-        for (const regExp of this._blacklist) {
+        for (const regExp of this._denylist) {
             if (regExp.test(pathnameAndSearch)) {
                 if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
                     logger.log(&#x60;The navigation route ${pathnameAndSearch} is not &#x60; +
-                        &#x60;being used, since the URL matches this blacklist pattern: &#x60; +
+                        &#x60;being used, since the URL matches this denylist pattern: &#x60; +
                         &#x60;${regExp}&#x60;);
                 }
                 return false;
             }
         }
-        if (this._whitelist.some((regExp) &#x3D;&gt; regExp.test(pathnameAndSearch))) {
+        if (this._allowlist.some((regExp) &#x3D;&gt; regExp.test(pathnameAndSearch))) {
             if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
                 logger.debug(&#x60;The navigation route ${pathnameAndSearch} &#x60; +
                     &#x60;is being used.&#x60;);
@@ -120,7 +120,7 @@ class NavigationRoute extends Route {
         if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
             logger.log(&#x60;The navigation route ${pathnameAndSearch} is not &#x60; +
                 &#x60;being used, since the URL being navigated to doesn&#x27;t &#x60; +
-                &#x60;match the whitelist.&#x60;);
+                &#x60;match the allowlist.&#x60;);
         }
         return false;
     }
