--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_CacheOnly.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_CacheOnly.js.html
@@ -36,11 +36,11 @@ import { messages } from &#x27;./utils/messages.js&#x27;;
 import &#x27;./_version.js&#x27;;
 /**
  * An implementation of a
- * [cache-only]{@link https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook/#cache-only}
+ * [cache-only]{@link /web/fundamentals/instant-and-offline/offline-cookbook/#cache-only}
  * request strategy.
  *
  * This class is useful if you want to take advantage of any
- * [Workbox plugins]{@link https://developers.google.com/web/tools/workbox/guides/using-plugins}.
+ * [Workbox plugins]{@link /web/tools/workbox/guides/using-plugins}.
  *
  * If there is no cache match, this will throw a &#x60;WorkboxError&#x60; exception.
  *
@@ -52,7 +52,7 @@ class CacheOnly {
      * @param {string} options.cacheName Cache name to store and retrieve
      * requests. Defaults to cache names provided by
      * [workbox-core]{@link module:workbox-core.cacheNames}.
-     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link https://developers.google.com/web/tools/workbox/guides/using-plugins}
+     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link /web/tools/workbox/guides/using-plugins}
      * to use in conjunction with this caching strategy.
      * @param {Object} options.matchOptions [&#x60;CacheQueryOptions&#x60;](https://w3c.github.io/ServiceWorker/#dictdef-cachequeryoptions)
      */
@@ -67,11 +67,14 @@ class CacheOnly {
      * [Workbox Router]{@link module:workbox-routing.Router}.
      *
      * @param {Object} options
-     * @param {Request} options.request The request to run this strategy for.
+     * @param {Request|string} options.request A request to run this strategy for.
      * @param {Event} [options.event] The event that triggered the request.
      * @return {Promise&amp;lt;Response&gt;}
      */
     async handle({ event, request }) {
+        if (typeof request &#x3D;&#x3D;&#x3D; &#x27;string&#x27;) {
+            request &#x3D; new Request(request);
+        }
         if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
             assert.isInstance(request, Request, {
                 moduleName: &#x27;workbox-strategies&#x27;,
