--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkFirst.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkFirst.js.html
@@ -39,11 +39,11 @@ import { cacheOkAndOpaquePlugin } from &#x27;./plugins/cacheOkAndOpaquePlugin.js
 import &#x27;./_version.js&#x27;;
 /**
  * An implementation of a
- * [network first]{@link https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook/#network-falling-back-to-cache}
+ * [network first]{@link /web/fundamentals/instant-and-offline/offline-cookbook/#network-falling-back-to-cache}
  * request strategy.
  *
  * By default, this strategy will cache responses with a 200 status code as
- * well as [opaque responses]{@link https://developers.google.com/web/tools/workbox/guides/handle-third-party-requests}.
+ * well as [opaque responses]{@link /web/tools/workbox/guides/handle-third-party-requests}.
  * Opaque responses are are cross-origin requests where the response doesn&#x27;t
  * support [CORS]{@link https://enable-cors.org/}.
  *
@@ -58,7 +58,7 @@ class NetworkFirst {
      * @param {string} options.cacheName Cache name to store and retrieve
      * requests. Defaults to cache names provided by
      * [workbox-core]{@link module:workbox-core.cacheNames}.
-     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link https://developers.google.com/web/tools/workbox/guides/using-plugins}
+     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link /web/tools/workbox/guides/using-plugins}
      * to use in conjunction with this caching strategy.
      * @param {Object} options.fetchOptions Values passed along to the
      * [&#x60;init&#x60;](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters)
@@ -68,7 +68,7 @@ class NetworkFirst {
      * that fail to respond within the timeout will fallback to the cache.
      *
      * This option can be used to combat
-     * &quot;[lie-fi]{@link https://developers.google.com/web/fundamentals/performance/poor-connectivity/#lie-fi}&quot;
+     * &quot;[lie-fi]{@link /web/fundamentals/performance/poor-connectivity/#lie-fi}&quot;
      * scenarios.
      */
     constructor(options &#x3D; {}) {
@@ -102,12 +102,15 @@ class NetworkFirst {
      * [Workbox Router]{@link module:workbox-routing.Router}.
      *
      * @param {Object} options
-     * @param {Request} options.request The request to run this strategy for.
+     * @param {Request|string} options.request A request to run this strategy for.
      * @param {Event} [options.event] The event that triggered the request.
      * @return {Promise&amp;lt;Response&gt;}
      */
     async handle({ event, request }) {
         const logs &#x3D; [];
+        if (typeof request &#x3D;&#x3D;&#x3D; &#x27;string&#x27;) {
+            request &#x3D; new Request(request);
+        }
         if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
             assert.isInstance(request, Request, {
                 moduleName: &#x27;workbox-strategies&#x27;,
