--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkOnly.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-strategies_NetworkOnly.js.html
@@ -35,11 +35,11 @@ import { messages } from &#x27;./utils/messages.js&#x27;;
 import &#x27;./_version.js&#x27;;
 /**
  * An implementation of a
- * [network-only]{@link https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook/#network-only}
+ * [network-only]{@link /web/fundamentals/instant-and-offline/offline-cookbook/#network-only}
  * request strategy.
  *
  * This class is useful if you want to take advantage of any
- * [Workbox plugins]{@link https://developers.google.com/web/tools/workbox/guides/using-plugins}.
+ * [Workbox plugins]{@link /web/tools/workbox/guides/using-plugins}.
  *
  * If the network request fails, this will throw a &#x60;WorkboxError&#x60; exception.
  *
@@ -51,7 +51,7 @@ class NetworkOnly {
      * @param {string} options.cacheName Cache name to store and retrieve
      * requests. Defaults to cache names provided by
      * [workbox-core]{@link module:workbox-core.cacheNames}.
-     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link https://developers.google.com/web/tools/workbox/guides/using-plugins}
+     * @param {Array&amp;lt;Object&gt;} options.plugins [Plugins]{@link /web/tools/workbox/guides/using-plugins}
      * to use in conjunction with this caching strategy.
      * @param {Object} options.fetchOptions Values passed along to the
      * [&#x60;init&#x60;](https://developer.mozilla.org/en-US/docs/Web/API/WindowOrWorkerGlobalScope/fetch#Parameters)
@@ -67,11 +67,14 @@ class NetworkOnly {
      * [Workbox Router]{@link module:workbox-routing.Router}.
      *
      * @param {Object} options
-     * @param {Request} options.request The request to run this strategy for.
+     * @param {Request|string} options.request The request to run this strategy for.
      * @param {Event} [options.event] The event that triggered the request.
      * @return {Promise&amp;lt;Response&gt;}
      */
     async handle({ event, request }) {
+        if (typeof request &#x3D;&#x3D;&#x3D; &#x27;string&#x27;) {
+            request &#x3D; new Request(request);
+        }
         if (process.env.NODE_ENV !&#x3D;&#x3D; &#x27;production&#x27;) {
             assert.isInstance(request, Request, {
                 moduleName: &#x27;workbox-strategies&#x27;,
