--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_generate-sw.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_generate-sw.js.html
@@ -56,12 +56,156 @@ const _generatedAssetNames &#x3D; new Set();
  * @memberof module:workbox-webpack-plugin
  */
 class GenerateSW {
+  // eslint-disable-next-line jsdoc/newline-after-description
   /**
    * Creates an instance of GenerateSW.
    *
-   * @param {Object} [config] See the
-   * [configuration guide](https://developers.google.com/web/tools/workbox/modules/workbox-webpack-plugin#configuration)
-   * for all supported options and defaults.
+   * @param {Object} config The configuration to use.
+   *
+   * @param {Array&amp;lt;module:workbox-build.ManifestEntry&gt;} [config.additionalManifestEntries]
+   * A list of entries to be precached, in addition to any entries that are
+   * generated as part of the build configuration.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.babelPresetEnvTargets&#x3D;[&#x27;chrome &gt;&#x3D; 56&#x27;]]
+   * The [targets](https://babeljs.io/docs/en/babel-preset-env#targets) to pass to
+   * &#x60;babel-preset-env&#x60; when transpiling the service worker bundle.
+   *
+   * @param {string} [config.cacheId] An optional ID to be prepended to cache
+   * names. This is primarily useful for local development where multiple sites
+   * may be served from the same &#x60;http://localhost:port&#x60; origin.
+   *
+   * @param {boolean} [config.cleanupOutdatedCaches&#x3D;false] Whether or not Workbox
+   * should attempt to identify an delete any precaches created by older,
+   * incompatible versions.
+   *
+   * @param {boolean} [config.clientsClaim&#x3D;false] Whether or not the service
+   * worker should [start controlling](/web/fundamentals/primers/service-workers/lifecycle#clientsclaim)
+   * any existing clients as soon as it activates.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.chunks] One or more chunk names whose corresponding
+   * output files should be included in the precache manifest.
+   *
+   * @param {string} [config.directoryIndex&#x3D;&#x27;index.html&#x27;] If a navigation request
+   * for a URL ending in &#x60;/&#x60; fails to match a precached URL, this value will be
+   * appended to the URL and that will be checked for a precache match. This
+   * should be set to what your web server is using for its directory index.
+   *
+   * @param {RegExp} [config.dontCacheBustURLsMatching] Assets that match this will be
+   * assumed to be uniquely versioned via their URL, and exempted from the normal
+   * HTTP cache-busting that&#x27;s done when populating the precache. While not
+   * required, it&#x27;s recommended that if your existing build process already
+   * inserts a &#x60;[hash]&#x60; value into each filename, you provide a RegExp that will
+   * detect that, as it will reduce the bandwidth consumed when precaching.
+   *
+   * @param {Array&amp;lt;string|RegExp|Function&gt;} [config.exclude&#x3D;[/\.map$/, /^manifest.*\.js$]]
+   * One or more specifiers used to exclude assets from the precache manifest.
+   * This is interpreted following
+   * [the same rules](https://webpack.js.org/configuration/module/#condition)
+   * as &#x60;webpack&#x60;&#x27;s standard &#x60;exclude&#x60; option.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.excludeChunks] One or more chunk names whose
+   * corresponding output files should be excluded from the precache manifest.
+   *
+   * @param {Array&amp;lt;RegExp&gt;} [config.ignoreURLParametersMatching&#x3D;[/^utm_/]]
+   * Any search parameter names that match against one of the RegExp in this array
+   * will be removed before looking for a precache match. This is useful if your
+   * users might request URLs that contain, for example, URL parameters used to
+   * track the source of the traffic.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.importScripts] A list of JavaScript files that
+   * should be passed to [&#x60;importScripts()&#x60;](https://developer.mozilla.org/en-US/docs/Web/API/WorkerGlobalScope/importScripts)
+   * inside the generated service worker file. This is  useful when you want to
+   * let Workbox create your top-level service worker file, but want to include
+   * some additional code, such as a push event listener.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.importScriptsViaChunks] One or more names of
+   * webpack chunks. The content of those chunks will be included in the
+   * generated service worker, via a call to &#x60;importScripts()&#x60;.
+   *
+   * @param {Array&amp;lt;string|RegExp|Function&gt;} [config.include]
+   * One or more specifiers used to include assets in the precache manifest.
+   * This is interpreted following
+   * [the same rules](https://webpack.js.org/configuration/module/#condition)
+   * as &#x60;webpack&#x60;&#x27;s standard &#x60;include&#x60; option.
+   *
+   * @param {boolean} [config.inlineWorkboxRuntime&#x3D;false] Whether the runtime code
+   * for the Workbox library should be included in the top-level service worker,
+   * or split into a separate file that needs to be deployed alongside the service
+   * worker. Keeping the runtime separate means that users will not have to
+   * re-download the Workbox code each time your top-level service worker changes.
+   *
+   * @param {Array&amp;lt;module:workbox-build.ManifestTransform&gt;} [config.manifestTransforms]
+   * One or more functions which will be applied sequentially against the
+   * generated manifest. If &#x60;modifyURLPrefix&#x60; or &#x60;dontCacheBustURLsMatching&#x60; are
+   * also specified, their corresponding transformations will be applied first.
+   *
+   * @param {number} [config.maximumFileSizeToCacheInBytes&#x3D;2097152] This value can be
+   * used to determine the maximum size of files that will be precached. This
+   * prevents you from inadvertently precaching very large files that might have
+   * accidentally matched one of your patterns.
+   *
+   * @param {string} [config.mode] If set to &#x27;production&#x27;, then an optimized service
+   * worker bundle that excludes debugging info will be produced. If not explicitly
+   * configured here, the &#x60;mode&#x60; value configured in the current &#x60;webpack&#x60; compiltion
+   * will be used.
+   *
+   * @param {Object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
+   * that, if present in an entry in the precache manifest, will be replaced with
+   * the corresponding value. This can be used to, for example, remove or add a
+   * path prefix from a manifest entry if your web hosting setup doesn&#x27;t match
+   * your local filesystem setup. As an alternative with more flexibility, you can
+   * use the &#x60;manifestTransforms&#x60; option and provide a function that modifies the
+   * entries in the manifest using whatever logic you provide.
+   *
+   * @param {string} [config.navigateFallback] If specified, all
+   * [navigation requests](/web/fundamentals/primers/service-workers/high-performance-loading#first_what_are_navigation_requests)
+   * for URLs that aren&#x27;t precached will be fulfilled with the HTML at the URL
+   * provided. You must pass in the URL of an HTML document that is listed in your
+   * precache manifest. This is meant to be used in a Single Page App scenario, in
+   * which you want all navigations to use common [App Shell HTML](/web/fundamentals/architecture/app-shell).
+   *
+   * @param {Array&amp;lt;RegExp&gt;} [config.navigateFallbackDenylist] An optional array
+   * of regular expressions that restricts which URLs the configured
+   * &#x60;navigateFallback&#x60; behavior applies to. This is useful if only a subset of
+   * your site&#x27;s URLs should be treated as being part of a
+   * [Single Page App](https://en.wikipedia.org/wiki/Single-page_application). If
+   * both &#x60;navigateFallbackDenylist&#x60; and &#x60;navigateFallbackAllowlist&#x60; are
+   * configured, the denylist takes precedent.
+   *
+   * @param {Array&amp;lt;RegExp&gt;} [config.navigateFallbackAllowlist] An optional array
+   * of regular expressions that restricts which URLs the configured
+   * &#x60;navigateFallback&#x60; behavior applies to. This is useful if only a subset of
+   * your site&#x27;s URLs should be treated as being part of a
+   * [Single Page App](https://en.wikipedia.org/wiki/Single-page_application). If
+   * both &#x60;navigateFallbackDenylist&#x60; and &#x60;navigateFallbackAllowlist&#x60; are
+   * configured, the denylist takes precedent.
+   *
+   * @param {boolean} [config.navigationPreload&#x3D;false] Whether or not to enable
+   * [navigation preload](/web/tools/workbox/modules/workbox-navigation-preload)
+   * in the generated service worker. When set to true, you must also use
+   * &#x60;runtimeCaching&#x60; to set up an appropriate response strategy that will match
+   * navigation requests, and make use of the preloaded response.
+   *
+   * @param {boolean|Object} [config.offlineGoogleAnalytics&#x3D;false] Controls
+   * whether or not to include support for
+   * [offline Google Analytics](/web/tools/workbox/guides/enable-offline-analytics).
+   * When &#x60;true&#x60;, the call to &#x60;workbox-google-analytics&#x60;&#x27;s &#x60;initialize()&#x60; will be
+   * added to your generated service worker. When set to an &#x60;Object&#x60;, that object
+   * will be passed in to the &#x60;initialize()&#x60; call, allowing you to customize the
+   * behavior.
+   *
+   * @param {Array&amp;lt;module:workbox-build.RuntimeCachingEntry&gt;} [config.runtimeCaching]
+   *
+   * @param {boolean} [config.skipWaiting&#x3D;false] Whether to add an
+   * unconditional call to [&#x60;skipWaiting()&#x60;]{@link module:workbox-core.skipWaiting}
+   * to the generated service worker. If &#x60;false&#x60;, then a &#x60;message&#x60; listener will
+   * be added instead, allowing you to conditionally call &#x60;skipWaiting()&#x60;.
+   *
+   * @param {boolean} [config.sourcemap&#x3D;true] Whether to create a sourcemap
+   * for the generated service worker files.
+   *
+   * @param {string} [config.swDest&#x3D;&#x27;service-worker.js&#x27;] The asset name of the
+   * service worker file that will be created by this plugin.
    */
   constructor(config &#x3D; {}) {
     this.config &#x3D; config;
