--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_inject-manifest.js.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-webpack-plugin_src_inject-manifest.js.html
@@ -59,12 +59,81 @@ const _generatedAssetNames &#x3D; new Set();
  * @memberof module:workbox-webpack-plugin
  */
 class InjectManifest {
+  // eslint-disable-next-line jsdoc/newline-after-description
   /**
    * Creates an instance of InjectManifest.
    *
-   * @param {Object} [config] See the
-   * [configuration guide](https://developers.google.com/web/tools/workbox/modules/workbox-webpack-plugin#configuration)
-   * for all supported options and defaults.
+   * @param {Object} config The configuration to use.
+   *
+   * @param {string} config.swSrc An existing service worker file that will be
+   * compiled and have a precache manifest injected into it.
+   *
+   * @param {Array&amp;lt;module:workbox-build.ManifestEntry&gt;} [config.additionalManifestEntries]
+   * A list of entries to be precached, in addition to any entries that are
+   * generated as part of the build configuration.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.chunks] One or more chunk names whose corresponding
+   * output files should be included in the precache manifest.
+   *
+   * @param {RegExp} [config.dontCacheBustURLsMatching] Assets that match this will be
+   * assumed to be uniquely versioned via their URL, and exempted from the normal
+   * HTTP cache-busting that&#x27;s done when populating the precache. While not
+   * required, it&#x27;s recommended that if your existing build process already
+   * inserts a &#x60;[hash]&#x60; value into each filename, you provide a RegExp that will
+   * detect that, as it will reduce the bandwidth consumed when precaching.
+   *
+   * @param {Array&amp;lt;string|RegExp|Function&gt;} [config.exclude&#x3D;[/\.map$/, /^manifest.*\.js$]]
+   * One or more specifiers used to exclude assets from the precache manifest.
+   * This is interpreted following
+   * [the same rules](https://webpack.js.org/configuration/module/#condition)
+   * as &#x60;webpack&#x60;&#x27;s standard &#x60;exclude&#x60; option.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.importScriptsViaChunks] One or more names of
+   * webpack chunks. The content of those chunks will be included in the
+   * generated service worker, via a call to &#x60;importScripts()&#x60;.
+   *
+   * @param {Array&amp;lt;string&gt;} [config.excludeChunks] One or more chunk names whose
+   * corresponding output files should be excluded from the precache manifest.
+   *
+   * @param {Array&amp;lt;string|RegExp|Function&gt;} [config.include]
+   * One or more specifiers used to include assets in the precache manifest.
+   * This is interpreted following
+   * [the same rules](https://webpack.js.org/configuration/module/#condition)
+   * as &#x60;webpack&#x60;&#x27;s standard &#x60;include&#x60; option.
+   *
+   * @param  {string} [config.injectionPoint&#x3D;&#x27;self.__WB_MANIFEST&#x27;] The string to
+   * find inside of the &#x60;swSrc&#x60; file. Once found, it will be replaced by the
+   * generated precache manifest.
+   *
+   * @param {Array&amp;lt;module:workbox-build.ManifestTransform&gt;} [config.manifestTransforms]
+   * One or more functions which will be applied sequentially against the
+   * generated manifest. If &#x60;modifyURLPrefix&#x60; or &#x60;dontCacheBustURLsMatching&#x60; are
+   * also specified, their corresponding transformations will be applied first.
+   *
+   * @param {number} [config.maximumFileSizeToCacheInBytes&#x3D;2097152] This value can be
+   * used to determine the maximum size of files that will be precached. This
+   * prevents you from inadvertently precaching very large files that might have
+   * accidentally matched one of your patterns.
+   *
+   * @param {string} [config.mode] If set to &#x27;production&#x27;, then an optimized service
+   * worker bundle that excludes debugging info will be produced. If not explicitly
+   * configured here, the &#x60;mode&#x60; value configured in the current &#x60;webpack&#x60;
+   * compilation will be used.
+   *
+   * @param {Object&amp;lt;string, string&gt;} [config.modifyURLPrefix] A mapping of prefixes
+   * that, if present in an entry in the precache manifest, will be replaced with
+   * the corresponding value. This can be used to, for example, remove or add a
+   * path prefix from a manifest entry if your web hosting setup doesn&#x27;t match
+   * your local filesystem setup. As an alternative with more flexibility, you can
+   * use the &#x60;manifestTransforms&#x60; option and provide a function that modifies the
+   * entries in the manifest using whatever logic you provide.
+   *
+   * @param {string} [config.swDest] The asset name of the
+   * service worker file that will be created by this plugin. If omitted, the
+   * name will be based on the &#x60;swSrc&#x60; name.
+   *
+   * @param {Array&amp;lt;Object&gt;} [config.webpackCompilationPlugins] Optional &#x60;webpack&#x60;
+   * plugins that will be used when compiling the &#x60;swSrc&#x60; input file.
    */
   constructor(config &#x3D; {}) {
     this.config &#x3D; config;
